--- a/main.css
+++ b/main.css
@@ -1,3 +1,3 @@
 body {
-    font-family: "Avenir Next W01","Avenir Next W00","Avenir Next","Avenir","Helvetica Neue",sans-serif;
+    font-family: "Avenir Next W01","Avenir Next W00","Avenir Next","Avenir","Helvetica Neue",sans-serif, font-size: 12px, color: #FFFFFF;
 }
